# InspirationalScreenSaver

./: .gitignore  CMakeLists.txt  README.md  gen_vs2015.bat  gen_vs2015Manual.bat  inspirationalScreenSaver.sln
ScreenSaver/: BitMask.cpp  BitMask.h  CMakeLists.txt  CurrentImage.cpp  CurrentImage.h  GalleryMemory.cpp  GalleryMemory.h  Globals.h  GraphicsProxy.cpp  GraphicsProxy.h  ImageManager.cpp  ImageManager.h  ImageSelector.cpp  ImageSelector.h  KeyProxy.cpp  KeyProxy.h  MainApp.cpp  MainApp.h  RandomImageSelector.cpp  RandomImageSelector.h  SDL_ScreenStruct.h  ScreenSaver.cpp  ScreenSaver.h  SequentialRandomImageSelector.cpp  SequentialRandomImageSelector.h  SoundEffect.cpp  SoundEffect.h  StopWatch.cpp  StopWatch.h  StopWatchScreen.cpp  StopWatchScreen.h  button.h  main.cpp  mainApp.cpp  mainApp.h  optionScreen.cpp  optionScreen.h  queueImageSelector.cpp  queueImageSelector.h  randomImageSelector.h  (+8 more)
allegroTest/: AllegroKeys.cpp  AllegroKeys.h  BitMask.cpp  CurrentImage.cpp  CurrentImage.h  GalleryMemory.cpp  GalleryMemory.h  GraphicsProxy.cpp  GraphicsProxy.h  ImageSelector.cpp  ImageSelector.h  KeyProxy.h  RenderObject.h  Scene.h  ScreenSaver.cpp  ScreenSaver.h  SoundProxy.cpp  SoundProxy.h  WindowsFiles.cpp  WindowsFiles.h  allegroTest.vcxproj  allegroTest.vcxproj.filters  button.h  main.cpp  mainApp.cpp  mainApp.h  myfile.txt  optionScreen.cpp  optionScreen.h  queueImageSelector.cpp  queueImageSelector.h  renderer.cpp  renderer.h  shuffledImageSelector.cpp  shuffledImageSelector.h  stopWatchMain.cpp  stopWatchMain.h  timers.cpp  workoutTimer.cpp  workoutTimer.h
build_vs2017/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  InspirationalScreenSaver.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_vs2017/ScreenSaver/: ScreenSaver.vcxproj  ScreenSaver.vcxproj.filters  cmake_install.cmake  screenSaverLog.txt
build_vs2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  InspirationalScreenSaver.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_vs2019/ScreenSaver/: ERRORS.TXT  ScreenSaver.vcxproj  ScreenSaver.vcxproj.filters  cmake_install.cmake  screenSaverLog.txt
cmake/: FindSDL2.cmake
